--- a/Scripts/LuaScripts/.vscode/settings.json
+++ b/Scripts/LuaScripts/.vscode/settings.json
@@ -3,11 +3,11 @@
         "**/*.meta": true,
         "**/*.tmp":true,
         "**/*.bak":true,
+        "**/~*.*":true,
     },
     "files.associations": {
         "*.txt":"lua",
-        "*.lua.txt":"lua",
         "*.lua":"lua",
     },
-    "editor.fontSize": 18
+    "editor.fontSize": 20
 }
