添加使用BuildPipeline打包AB

--- a/Scripts/ThirdPart/rotorz/Editor/rotorz-editor.asmdef
+++ b/Scripts/ThirdPart/rotorz/Editor/rotorz-editor.asmdef
@@ -3,7 +3,9 @@
     "references": [
         "GUID:bdcdf743c5005b44cbc9915e48359335"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
