处理数据配置

--- a/Scripts/LuaScripts/.vscode/launch.json
+++ b/Scripts/LuaScripts/.vscode/launch.json
@@ -22,7 +22,7 @@
             "type": "lua",
             "request": "launch",
             "name": "LuaPanda-DebugFile",
-            "luaPath": "",
+            "luaPath": "E:/WorkSpace/DotGameProject/DotGameTools/lua/lua53.exe",
             "packagePath": [],
             "luaFileExtension": "txt",
             "connectionPort": 8818,
