--- a/DotFramework/DotLog/DotLog/DotLog.csproj
+++ b/DotFramework/DotLog/DotLog/DotLog.csproj
@@ -43,7 +43,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net">
-      <HintPath>..\..\DependLibs\log4net.dll</HintPath>
+      <HintPath>..\..\DotDependLibs\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,9 +58,7 @@
     <Compile Include="ILog.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="LogExceptions.cs" />
-    <Compile Include="LogUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnityConsoleAppender.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
