--- a/DotFramework/DotLog/DotLog-Unity/DotLog-Unity.csproj
+++ b/DotFramework/DotLog/DotLog-Unity/DotLog-Unity.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>$(ProjectDir)\post-command.bat $(ConfigurationName) $(TargetName) $(TargetDir)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
