--- a/DotFramework/DotPool/DotPool-Unity/DotPool-Unity.csproj
+++ b/DotFramework/DotPool/DotPool-Unity/DotPool-Unity.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6AD093A2-6DF7-4C93-832C-447EBB4285EB}</ProjectGuid>
+    <ProjectGuid>{2E28D523-F601-4339-B5C3-91717AD54D60}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dot.Log</RootNamespace>
-    <AssemblyName>DotLog-WinEditor</AssemblyName>
+    <RootNamespace>Dot.Pool</RootNamespace>
+    <AssemblyName>DotPool-Unity</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;UNITY_EDITOR</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -26,14 +26,11 @@
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\DotLibs\</OutputPath>
-    <DefineConstants>TRACE;UNITY_EDITOR</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net">
-      <HintPath>..\..\DotDependLibs\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,25 +39,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\DotLog-Unity\LogUtil.cs">
-      <Link>LogUtil.cs</Link>
-    </Compile>
-    <Compile Include="..\DotLog-Unity\UnityConsoleAppender.cs">
-      <Link>UnityConsoleAppender.cs</Link>
-    </Compile>
-    <Compile Include="..\DotLog\ILog.cs">
-      <Link>ILog.cs</Link>
-    </Compile>
-    <Compile Include="..\DotLog\LogExceptions.cs">
-      <Link>LogExceptions.cs</Link>
-    </Compile>
-    <Compile Include="..\DotLog\Logger.cs">
-      <Link>Logger.cs</Link>
+    <Compile Include="..\DotPool\ObjectPool.cs">
+      <Link>ObjectPool.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
