--- a/DotFramework/DotCore/DotCore-Unity/DotCore-Unity.csproj
+++ b/DotFramework/DotCore/DotCore-Unity/DotCore-Unity.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2E28D523-F601-4339-B5C3-91717AD54D60}</ProjectGuid>
+    <ProjectGuid>{13725F38-BA86-4378-BA49-DD41BB638322}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dot.Pool</RootNamespace>
-    <AssemblyName>DotPool-Unity</AssemblyName>
+    <RootNamespace>DotCore_Unity</RootNamespace>
+    <AssemblyName>DotCore-Unity</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -39,16 +39,24 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="UnityEngine">
       <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\DotPool\ObjectPool.cs">
-      <Link>ObjectPool.cs</Link>
+    <Compile Include="..\DotCore\Generic\ListDictionary.cs">
+      <Link>Generic\ListDictionary.cs</Link>
     </Compile>
+    <Compile Include="..\DotCore\Generic\UniqueID.cs">
+      <Link>Generic\UniqueID.cs</Link>
+    </Compile>
+    <Compile Include="..\DotCore\Singleton.cs">
+      <Link>Singleton.cs</Link>
+    </Compile>
+    <Compile Include="SingletonBehaviour.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\DontDestoryBehaviour.cs" />
+    <Compile Include="Util\DontDestroyHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
