--- a/DotFramework/DotTimer/DotTimer/DotTimer.csproj
+++ b/DotFramework/DotTimer/DotTimer/DotTimer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{13725F38-BA86-4378-BA49-DD41BB638322}</ProjectGuid>
+    <ProjectGuid>{7A4432FC-8A44-4EEA-94F0-B5A586BB15BD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DotCore_Unity</RootNamespace>
-    <AssemblyName>DotCore-Unity</AssemblyName>
+    <RootNamespace>Dot.Timer</RootNamespace>
+    <AssemblyName>DotTimer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DotCore">
+      <HintPath>..\libs\DotCore.dll</HintPath>
+    </Reference>
+    <Reference Include="DotPool-Framework">
+      <HintPath>..\libs\DotPool-Framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,27 +45,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\DotCore\Generic\ListDictionary.cs">
-      <Link>Generic\ListDictionary.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore\Generic\UniqueID.cs">
-      <Link>Generic\UniqueID.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore\Proxy\UpdateProxy.cs">
-      <Link>Proxy\UpdateProxy.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore\Singleton.cs">
-      <Link>Singleton.cs</Link>
-    </Compile>
-    <Compile Include="SingletonBehaviour.cs" />
+    <Compile Include="HierarchicalTimerWheel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\DontDestoryBehaviour.cs" />
-    <Compile Include="Util\DontDestroyHandler.cs" />
+    <Compile Include="TimerManager.cs" />
+    <Compile Include="TimerTask.cs" />
+    <Compile Include="TimerWheel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
