--- a/DotFramework/DotCore/DotCore-Framework/DotCore-Framework.csproj
+++ b/DotFramework/DotCore/DotCore-Framework/DotCore-Framework.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{13725F38-BA86-4378-BA49-DD41BB638322}</ProjectGuid>
+    <ProjectGuid>{8EE06686-9512-4B51-8C70-C2B2FA5DBAD7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DotCore_Unity</RootNamespace>
-    <AssemblyName>DotCore-Unity</AssemblyName>
+    <RootNamespace>Dot.Core</RootNamespace>
+    <AssemblyName>DotCore-Framework</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -39,30 +39,15 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\DotCore\Generic\ListDictionary.cs">
-      <Link>Generic\ListDictionary.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore\Generic\UniqueID.cs">
-      <Link>Generic\UniqueID.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore\Proxy\UpdateProxy.cs">
-      <Link>Proxy\UpdateProxy.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore\Singleton.cs">
-      <Link>Singleton.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore\Util\MathUtil.cs">
-      <Link>Util\MathUtil.cs</Link>
-    </Compile>
-    <Compile Include="SingletonBehaviour.cs" />
+    <Compile Include="Generic\ListDictionary.cs" />
+    <Compile Include="Generic\UniqueID.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\DontDestoryBehaviour.cs" />
-    <Compile Include="Util\DontDestroyHandler.cs" />
+    <Compile Include="Proxy\UpdateProxy.cs" />
+    <Compile Include="Singleton.cs" />
+    <Compile Include="Util\MathUtil.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
