--- a/DotFramework/DotCore/DotCore/DotCore.csproj
+++ b/DotFramework/DotCore/DotCore/DotCore.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4322708C-C2AC-40D7-A5F9-CC5F8834343A}</ProjectGuid>
+    <ProjectGuid>{13725F38-BA86-4378-BA49-DD41BB638322}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dot.Core</RootNamespace>
+    <RootNamespace>DotCore</RootNamespace>
     <AssemblyName>DotCore</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,14 +39,30 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine">
+      <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Generic\ListDictionary.cs" />
-    <Compile Include="Generic\UniqueID.cs" />
+    <Compile Include="..\DotCore-Framework\Generic\ListDictionary.cs">
+      <Link>Generic\ListDictionary.cs</Link>
+    </Compile>
+    <Compile Include="..\DotCore-Framework\Generic\UniqueID.cs">
+      <Link>Generic\UniqueID.cs</Link>
+    </Compile>
+    <Compile Include="..\DotCore-Framework\Proxy\UpdateProxy.cs">
+      <Link>Proxy\UpdateProxy.cs</Link>
+    </Compile>
+    <Compile Include="..\DotCore-Framework\Singleton.cs">
+      <Link>Singleton.cs</Link>
+    </Compile>
+    <Compile Include="..\DotCore-Framework\Util\MathUtil.cs">
+      <Link>Util\MathUtil.cs</Link>
+    </Compile>
+    <Compile Include="SingletonBehaviour.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proxy\UpdateProxy.cs" />
-    <Compile Include="Singleton.cs" />
-    <Compile Include="Util\MathUtil.cs" />
+    <Compile Include="Util\DontDestoryBehaviour.cs" />
+    <Compile Include="Util\DontDestroyHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
