--- a/DotFramework/DotContext/DotContext/DotContext.csproj
+++ b/DotFramework/DotContext/DotContext/DotContext.csproj
@@ -31,8 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotPool-Framework">
-      <HintPath>..\libs\DotPool-Framework.dll</HintPath>
+    <Reference Include="DotPool, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DotLibs\DotPool.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
