--- a/DotFramework/DotCore/DotCore/DotCore.csproj
+++ b/DotFramework/DotCore/DotCore/DotCore.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -44,25 +44,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\DotCore-Framework\Generic\ListDictionary.cs">
-      <Link>Generic\ListDictionary.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore-Framework\Generic\UniqueID.cs">
-      <Link>Generic\UniqueID.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore-Framework\Proxy\UpdateProxy.cs">
-      <Link>Proxy\UpdateProxy.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore-Framework\Singleton.cs">
-      <Link>Singleton.cs</Link>
-    </Compile>
-    <Compile Include="..\DotCore-Framework\Util\MathUtil.cs">
-      <Link>Util\MathUtil.cs</Link>
-    </Compile>
+    <Compile Include="Generic\ListDictionary.cs" />
+    <Compile Include="Generic\UniqueID.cs" />
+    <Compile Include="Proxy\UpdateProxy.cs" />
+    <Compile Include="Singleton.cs" />
     <Compile Include="SingletonBehaviour.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\DontDestoryBehaviour.cs" />
     <Compile Include="Util\DontDestroyHandler.cs" />
+    <Compile Include="Util\MathUtil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
