--- a/DotFramework/DotLog/DotLog/DotLog.csproj
+++ b/DotFramework/DotLog/DotLog/DotLog.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\DotLibs\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -67,4 +67,10 @@
     <Compile Include="UnityConsoleAppender.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>set pdbPath=$(TargetDir)$(ProjectName).pdb
+if exist %25pdbPath%25 (
+del /q %25pdbPath%25
+)</PreBuildEvent>
+  </PropertyGroup>
 </Project>
