添加生成int型的唯一标识

--- a/DotFramework/DotCore/DotCore/DotCore.csproj
+++ b/DotFramework/DotCore/DotCore/DotCore.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Extension\UnityObjectExtensions.cs" />
     <Compile Include="Generic\ListDictionary.cs" />
     <Compile Include="Generic\UniqueID.cs" />
+    <Compile Include="Generic\UniqueIntID.cs" />
     <Compile Include="Proxy\UpdateProxy.cs" />
     <Compile Include="Singleton.cs" />
     <Compile Include="SingletonBehaviour.cs" />
