--- a/DotFramework/DotPool/DotPoolEditor/DotPoolEditor.csproj
+++ b/DotFramework/DotPool/DotPoolEditor/DotPoolEditor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{13725F38-BA86-4378-BA49-DD41BB638322}</ProjectGuid>
+    <ProjectGuid>{15E762BE-5AA1-4646-81E9-BD50399E2B2E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dot.Core</RootNamespace>
-    <AssemblyName>DotCore</AssemblyName>
+    <RootNamespace>DotEdior.Pool</RootNamespace>
+    <AssemblyName>DotPoolEditor</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -17,26 +17,20 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\DotLibs\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <OutputPath>..\..\DotLibs\Editor\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\DotLibs\</OutputPath>
+    <OutputPath>..\..\DotLibs\Editor\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotLog, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DotLibs\DotLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,28 +39,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine">
-      <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Asset\AssetUtil.cs" />
-    <Compile Include="Dispose\ADisposable.cs" />
-    <Compile Include="Dispose\IDispose.cs" />
-    <Compile Include="Extension\StringExtensions.cs" />
-    <Compile Include="Extension\TransformExtensions.cs" />
-    <Compile Include="Extension\UnityObjectExtensions.cs" />
-    <Compile Include="Generic\ListDictionary.cs" />
-    <Compile Include="Generic\UniqueID.cs" />
-    <Compile Include="Generic\UniqueIntID.cs" />
-    <Compile Include="Proxy\UpdateProxy.cs" />
-    <Compile Include="Singleton.cs" />
-    <Compile Include="SingletonBehaviour.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\BitUtil.cs" />
-    <Compile Include="Util\DontDestoryBehaviour.cs" />
-    <Compile Include="Util\DontDestroyHandler.cs" />
-    <Compile Include="Util\MathUtil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
