调整整理DOT库的依赖关系

--- a/DotFramework/DotContext/DotContext/DotContext.csproj
+++ b/DotFramework/DotContext/DotContext/DotContext.csproj
@@ -31,9 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotPool, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="DotCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DotLibs\DotPool.dll</HintPath>
+      <HintPath>..\..\DotLibs\DotCore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
