添加服务器简化消息发送

--- a/DotFramework/DotMap/DotMap/DotMap.csproj
+++ b/DotFramework/DotMap/DotMap/DotMap.csproj
@@ -48,5 +48,8 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="PrefabBaker\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
