--- a/DotFramework/DotNet/DotNet/DotNet.csproj
+++ b/DotFramework/DotNet/DotNet/DotNet.csproj
@@ -24,13 +24,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\DotLibs\</OutputPath>
     <DefineConstants>TRACE;NET_MESSAGE_JSON,NET_MESSAGE_PB</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DebugSymbols>false</DebugSymbols>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotCore">
@@ -82,6 +82,8 @@
     <Compile Include="Server\ServerNet.cs" />
     <Compile Include="Server\ServerNetConst.cs" />
     <Compile Include="Server\ServerNetListener.cs" />
+    <Compile Include="Server\ServerNetListener_Json.cs" />
+    <Compile Include="Server\ServerNetListener_PB.cs" />
     <Compile Include="Server\ServerNetSession.cs" />
     <Compile Include="Stream\BufferStream.cs" />
     <Compile Include="Stream\MemoryStreamEx.cs" />
