--- a/DotFramework/DotMap/DotMapEditor/DotMapEditor.csproj
+++ b/DotFramework/DotMap/DotMapEditor/DotMapEditor.csproj
@@ -50,6 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Item\ItemBehaviourEditor.cs" />
+    <Compile Include="Lightmap\SceneLightmapBaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,5 +60,6 @@
       <Name>DotMap</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
