--- a/DotFramework/DotAsset/DotAsset/DotAsset.csproj
+++ b/DotFramework/DotAsset/DotAsset/DotAsset.csproj
@@ -62,6 +62,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEditor">
+      <HintPath>..\..\DotDependLibs\Editor\UnityEditor.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
