--- a/DotFramework/DotAsset/DotAssetEditor/DotAssetEditor.csproj
+++ b/DotFramework/DotAsset/DotAssetEditor/DotAssetEditor.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{571E6F1D-9386-4BC9-B6C5-FF282318A0E9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DotAssetEditor</RootNamespace>
+    <RootNamespace>DotEditor.Asset</RootNamespace>
     <AssemblyName>DotAssetEditor</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -35,6 +35,10 @@
     </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DotCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DotLibs\DotCore.dll</HintPath>
+    </Reference>
     <Reference Include="DotCoreEditor">
       <HintPath>..\..\DotLibs\Editor\DotCoreEditor.dll</HintPath>
     </Reference>
@@ -48,6 +52,10 @@
     <Reference Include="System.Xml" />
     <Reference Include="UnityEditor">
       <HintPath>..\..\DotDependLibs\Editor\UnityEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
